Fix an issue of image loss

--- a/content/post/05001_BART.Rmd
+++ b/content/post/05001_BART.Rmd
@@ -26,7 +26,9 @@ VER <- "V4"
 
 如下图，屏幕中央展示一个气球；下方有左右两个按钮，分别采用一个**形状**表示**打气**（左侧）和**获取奖励**（右侧）；按钮下方有上下两个计分板，分别用**刻度**表示累计获得的奖励（上）和最近一个未爆炸气球成功兑换的奖励（下）。用户可以通过触碰按钮（“移动APP”）或使用鼠标点击（“电脑WEB”）或使用键盘的左右键（“电脑WEB”，需要在练习时候提示）而做出选择。
 
-![**主界面**](images/BART/界面.png)
+```{r include-image, fig.cap="主界面", fig.align='center', echo=FALSE}
+knitr::include_graphics("/images/BART/界面.png")
+```
 
 选择结果（注意：选择结果没有正确与错误之分）：
 
