--- a/content/post/00903_CPT2.Rmd
+++ b/content/post/00903_CPT2.Rmd
@@ -61,7 +61,7 @@ VER <- "V4"
 ## 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(file.path("config", NAME_EN, "configs.csv")),
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
              caption = "配置参数总表")
 ```
 
@@ -71,9 +71,9 @@ knitr::kable(readr::read_csv(file.path("config", NAME_EN, "configs.csv")),
     + 显示正确率和平均正确反应时间
     + 展示标准分数和超越百分比
 * 提交原始数据如下表（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
-    
+
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(file.path("config", NAME_EN, "recs.csv")),
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
              caption = "原始数据变量列表")
 ```
 
@@ -83,7 +83,7 @@ knitr::kable(readr::read_csv(file.path("config", NAME_EN, "recs.csv")),
 * 传入参数：
 
 ```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(file.path("config", NAME_EN, "sdk.csv")))
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")))
 ```
 
 ## 修订历史
