--- a/content/post/03201_Shifting.Rmd
+++ b/content/post/03201_Shifting.Rmd
@@ -26,7 +26,7 @@ VER <- "V4"
 ## 交互界面
 
 ```{r task-flow, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-DiagrammeR::grViz(file.path("scripts", NAME_EN, "taskflow.gv"),
+DiagrammeR::grViz(here::here("data", "scripts", NAME_EN, "taskflow.gv"),
                   width = 900, height = 100)
 ```
 
@@ -52,7 +52,7 @@ DiagrammeR::grViz(file.path("scripts", NAME_EN, "taskflow.gv"),
         - 用户对图片做出操作反应或达到最大呈现时间后，屏幕需在下一个试次开始前（即下一张背景图片出现前）变成空屏状态，持续时间为*反应线索间隔*，由配置参数`rci`（默认为`500ms`）控制。
 
 ```{r stimuli, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(file.path("config", NAME_EN, "stimuli.csv")),
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv")),
              caption = "动物图片及其属性一览表")
 ```
 
@@ -87,7 +87,7 @@ knitr::kable(readr::read_csv(file.path("config", NAME_EN, "stimuli.csv")),
 ## 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(file.path("config", NAME_EN, "configs.csv")),
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
              caption = "配置参数总表")
 ```
 
@@ -99,7 +99,7 @@ knitr::kable(readr::read_csv(file.path("config", NAME_EN, "configs.csv")),
 * 提交原始数据如下表（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(file.path("config", NAME_EN, "recs.csv")),
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
              caption = "原始数据变量列表")
 ```
 
@@ -109,7 +109,7 @@ knitr::kable(readr::read_csv(file.path("config", NAME_EN, "recs.csv")),
 * 传入参数：
 
 ```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(file.path("config", NAME_EN, "sdk.csv")))
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")))
 ```
 
 ## 修订历史
