Support tasknames taxonomy for better arrangement of website

--- a/content/post/03201_Shifting.Rmd
+++ b/content/post/03201_Shifting.Rmd
@@ -4,6 +4,7 @@ author: 张亮
 date: 2018-03-03
 slug: 03201-shifting
 code: "03201"
+tasknames: "任务转换范式"
 ---
 
 ```{r basic-settings, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
