--- a/content/post/03202_Shifting2.Rmd
+++ b/content/post/03202_Shifting2.Rmd
@@ -4,6 +4,7 @@ author: 张亮
 date: 2018-03-03
 slug: 03202-shifting2
 code: "03202"
+tasknames: "任务转换范式"
 ---
 
 ```{r basic-settings, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
