Clarify description for Flanker task flow

--- a/content/post/00101_Flanker.Rmd
+++ b/content/post/00101_Flanker.Rmd
@@ -27,7 +27,7 @@ VER <- "V4"
 
 ## 交互界面
 
-在每一个试次中，屏幕中央呈现一个加号（`+`，即注视点），用户需要注视这个加号；一定时间（由参数控制）后，屏幕中央呈现一个刺激（由**5条小鱼**排成一排而组成的图片，具体参看详细说明），且屏幕下方左右分别需要*同时*呈现<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>按钮，用户需要在刺激消失（刺激呈现最长时间由参数控制）前根据**最中间小鱼鱼头的朝向**做出操作反应（见详细说明）。用户反应或达到刺激最大呈现时间后刺激消失，接着屏幕保持一定时间的空白（试次间隔时间）后进入下一个试次。
+首先，屏幕中央呈现一个加号（`+`，即注视点，用于提醒用户注意屏幕中央）。一定时间（由参数控制）后，加号消失，同时屏幕中央呈现一个刺激（由**5条小鱼**排成一排而组成的图片，具体参看详细说明），且屏幕下方左右分别需要*同时*呈现<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>按钮。用户需要在刺激消失（刺激呈现最长时间由参数控制）前根据**最中间小鱼鱼头的朝向**做出操作反应（见详细说明）。用户反应或达到刺激最大呈现时间后刺激消失，接着屏幕保持一定时间的空白（试次间隔时间）后进入下一个试次。
 
 **引导与练习**。引导分为两部分：
 
