Finished first part of Filtering task

--- a/content/post/06901-Filtering.Rmd
+++ b/content/post/06901-Filtering.Rmd
@@ -42,7 +42,8 @@ knitr::include_graphics("/images/Filtering/taskflow.png")
 
 引导与练习：
 
-* 引导：由于本题目的面对的对象是年龄较小的孩子，所以引导需要更加丰富，即多使用*简单的文字*、*语音*和*动画*，使小孩子明白题目的要求。
+* 引导：由于本题目的面对的对象是年龄较小的孩子，所以引导需要更加丰富，即多使用*简单的文字*、*语音*和*动画*，使孩子明白题目的要求。
+* 练习：刺激总计有10种（具体见**详细说明**），有左右两种反应可能，因此，练习设置为20种，随机呈现。仅当正确率达到60%及以上才能进入正式测评。
 
 [^1]: 注意该图仅为样例，实际使用的图形元素一般与图中不完全一致。
 [^2]: 刺激阵列消失后需注意给用户的反馈信息。
