Complete stimuli description

--- a/content/post/06901-Filtering.Rmd
+++ b/content/post/06901-Filtering.Rmd
@@ -6,6 +6,11 @@ draft: true
 slug: 06901-filtering
 code: "06901"
 tasknames: "干扰排除范式"
+bibliography: "refs/MyFullResearch.bib"
+link-citations: true
+output:
+  blogdown::html_page:
+    toc: true
 ---
 
 ```{r basic settings, include=FALSE}
@@ -34,7 +39,7 @@ knitr::include_graphics("/images/Filtering/taskflow.png")
 图\@ref(fig:taskflow-image)展示了基本流程[^1]：
 
 1. 屏幕中间呈现一个*加号*（+，用于提醒用户注意的注视点）。
-1. 200毫秒后，加号消失，同时屏幕中央呈现一个*刺激阵列*（具体见**[刺激][]**）。
+1. 200毫秒（此时间可由配置参数更改）后，加号消失，同时屏幕中央呈现一个*刺激阵列*（具体见**[刺激][]**）。
 1. 100毫秒（此时间可由配置参数更改）后，刺激阵列消失，屏幕变为空白。
 1. 900毫秒（此时间可由配置参数更改）后，屏幕中央呈现另一个刺激阵列，同时屏幕下方左右侧分别呈现一个按钮：左侧按钮显示“变了”，右侧按钮显示“没变”。
 1. 在第二个刺激阵列出现后，用户需要在2000毫秒（即*最长等待时间*，此时间可由配置参数更改）时间内做出判断和操作。刺激阵列会在用户按键后或者达到最长等待时间后消失[^2]。
@@ -45,20 +50,31 @@ knitr::include_graphics("/images/Filtering/taskflow.png")
 * 引导：由于本题目的面对的对象是年龄较小的孩子，所以引导需要更加丰富，即多使用*简单的文字*、*语音*和*动画*，使孩子明白题目的要求。
 * 练习：刺激总计有10种（具体见**[刺激][]**），有左右两种反应可能，因此，练习设置为20种，随机呈现。仅当正确率达到60%及以上才能进入正式测评。
 
-[^1]: 注意该图仅为样例，实际使用的图形元素一般与图中不完全一致。
+[^1]: 注意该图仅为样例，实际使用的[图形元素](#stim)（本题目采用的是糖果）与图中不完全一致。
 [^2]: 刺激阵列消失后需注意给用户的反馈信息。
 
 ## 详细说明 {#detail}
 
 ### 刺激 {#stim}
 
-本题目的刺激是
+本题目的刺激是刺激阵列，即由多个元素组成[@Ophir2009]。其中包含两类元素：
 
-* 操作
+1. 黄色糖果。这是需要用户**注意**的刺激元素。
+1. 绿色糖果。这是需要用户**忽略**的刺激元素。
 
-* 序列
+每一个刺激阵列都是由若干个这两种元素随机排列而成。每一个元素的朝向都是*水平*、*垂直*、*左倾45&deg;*和*右倾45&deg;*中的一种，且*相互不重叠*。在一个试次中先后出现的刺激阵列里，需要用户忽略的元素不会发生变化，但需要用户注意的元素的朝向可能（顺时针或逆时针）旋转45&deg;。
 
-* 序列配置（参考“标准.html”文件中关于格式的说明）
+**刺激的呈现**。每一个试次都包含5个部分（进一步内容参考表\@ref(tab:configs)）：
+
+1. 注视点呈现。时间配置参数：线索刺激间隔（`csi`），默认200毫秒。
+1. 刺激阵列1呈现。时间配置参数：最大呈现时间1（`maxSt1`），默认100毫秒。
+1. 刺激间空白屏。时间配置参数：刺激间隔时间（`isi`），默认900毫秒。
+1. 刺激阵列2呈现。时间配置参数：最大呈现时间2（`maxSt2`），默认2000毫秒。注意在用户操作后刺激也会立即消失。
+1. 试次间空白屏。时间配置参数：试次间隔时间（`iti`），默认200毫秒。
+
+### 操作 {#oper}
+
+### 序列配置 {#seq}
 
 ## 配置参数 {#config}
 
@@ -89,3 +105,5 @@ knitr::include_graphics("/images/Filtering/taskflow.png")
 ```
 
 ## 修订历史 {#mod}
+
+## 参考文献 {#ref}
