Add operation part for Filtering task

--- a/content/post/06901-Filtering.Rmd
+++ b/content/post/06901-Filtering.Rmd
@@ -74,6 +74,11 @@ knitr::include_graphics("/images/Filtering/taskflow.png")
 
 ### 操作 {#oper}
 
+用户需要对比前后两次出现的刺激阵列是否有需要注意的元素发生改变（即朝向旋转45&deg;），然后做出操作。根据不同的设备状态，操作有所不同：
+
+* **键鼠操作**。要求用户必须用键盘上的左右键反应，而不能使用鼠标点击屏幕下方的按钮。键盘的左右键分别对应屏幕下方的左右方按钮。
+* **触控屏操作**。触碰屏幕下方对应的按钮即可。
+
 ### 序列配置 {#seq}
 
 ## 配置参数 {#config}
