Fix a broken cross-reference

--- a/content/post/06901-Filtering.Rmd
+++ b/content/post/06901-Filtering.Rmd
@@ -51,7 +51,7 @@ knitr::include_graphics("/images/Filtering/taskflow.png")
 * 引导：由于本题目的面对的对象是年龄较小的孩子，所以引导需要更加丰富，即多使用*简单的文字*、*语音*和*动画*，使孩子明白题目的要求。
 * 练习：刺激总计有10种（具体见**[刺激][]**），有左右两种反应可能，因此，练习设置为20种，随机呈现。仅当正确率达到60%及以上才能进入正式测评。
 
-[^1]: 注意该图仅为样例，实际使用的[图形元素](#stim)（本题目采用的是糖果）与图中不完全一致。
+[^1]: 注意该图仅为样例，实际使用的[图形元素](#刺激)（本题目采用的是糖果）与图中不完全一致。
 [^2]: 刺激阵列消失后需注意给用户的反馈信息。
 
 ## 详细说明
@@ -69,7 +69,6 @@ knitr::include_graphics("/images/Filtering/taskflow.png")
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv")),
              caption = "所有可能的刺激阵列")
 ```
-
 
 **刺激的呈现**。每一个试次都包含5个部分（进一步内容参考表\@ref(tab:configs)）：
 
