--- a/content/post/06901_Filtering.Rmd
+++ b/content/post/06901_Filtering.Rmd
@@ -87,6 +87,15 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv"
 
 ### 序列配置
 
+序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard.html")`。序列中各个元素的意义：
+
+* `length`：序列的长度
+* `id`：刺激阵列（参考表\@ref(tab:stimuli)）的编号（1-10）。
+* `target`：与`id`对应，是当前刺激包含的需要用户注意的元素（即黄色糖果）的个数。
+* `distractor`：与`id`对应，是当前刺激包含的需要用户忽略的元素（即绿色糖果）的个数。
+* `type`：刺激阵列第二次出现时的变化。`Stay`表示不旋转，`Clockwise`表示顺时针旋转45&deg;，`Counter`表示逆时针旋转45&deg;。
+* `cresp`：正确答案。`Left`表示左侧，`Right`表示右侧。
+
 ## 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE}
