--- a/content/post/06901_Filtering.Rmd
+++ b/content/post/06901_Filtering.Rmd
@@ -87,7 +87,7 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv"
 
 ### 序列配置
 
-序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard.html")`。序列中各个元素的意义：
+序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)。序列中各个元素的意义：
 
 * `length`：序列的长度
 * `id`：刺激阵列（参考表\@ref(tab:stimuli)）的编号（1-10）。
