--- a/content/post/06901_Filtering.Rmd
+++ b/content/post/06901_Filtering.Rmd
@@ -99,8 +99,8 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv"
 ## 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE}
-# knitr::kable(readr::read_csv(file.path("config", NAME_EN, "configs.csv")),
-#              caption = "配置参数总表")
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
+             caption = "配置参数总表")
 ```
 
 ## 数据记录
@@ -108,7 +108,7 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv"
 * 题目结果显示
     + 显示正确率和平均正确反应时间
     + 展示标准分数和超越百分比
-* 提交原始数据如下表（参考“标准.html”文件中关于格式的说明）
+* 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
 # knitr::kable(readr::read_csv(file.path("config", NAME_EN, "recs.csv")),
