--- a/content/post/06901_Filtering.Rmd
+++ b/content/post/06901_Filtering.Rmd
@@ -111,8 +111,8 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv"
 * 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
-# knitr::kable(readr::read_csv(file.path("config", NAME_EN, "recs.csv")),
-#              caption = "原始数据变量列表")
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
+             caption = "原始数据变量列表")
 ```
 
 ## 试题算分
