--- a/content/post/06901_Filtering.Rmd
+++ b/content/post/06901_Filtering.Rmd
@@ -18,7 +18,7 @@ output:
 NAME_CN <- "班务达人"
 NAME_EN <- "Filtering"
 CODE <- "06901"
-SDK <- 0
+SDK <- 104
 VER <- "V4"
 ```
 
@@ -117,11 +117,9 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
 
 ## 试题算分
 
-* 算分码：`r SDK`
-* 传入参数：
-
 ```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-# knitr::kable(readr::read_csv(file.path("config", NAME_EN, "sdk.csv")))
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")),
+             caption = paste0("传入参数（算分码：`", SDK, "`）"))
 ```
 
 ## 修订历史
