--- a/content/post/06901_Filtering.Rmd
+++ b/content/post/06901_Filtering.Rmd
@@ -28,7 +28,7 @@ VER <- "V4"
 * **题目编号**：`r CODE`
 * **任务描述**：测查注意力，特别是个体的注意选择的能力和注意广度的高低。
 * **测查能力**：注意力-选择注意
-* **相关任务**：科学达人（Filtering2，近期将修改名字）。
+* **相关任务**：彩条达人（Filtering2）。本题目是彩条达人的低年龄（6-10岁）版本。
 
 ## 交互界面
 
