Add links to reference related tasks

--- a/content/post/00102_Flanker2.Rmd
+++ b/content/post/00102_Flanker2.Rmd
@@ -22,7 +22,7 @@ VER <- "V4"
 * **题目编号**：`r CODE`
 * **任务描述**：测查自控力，特别是排除干扰的能力。
 * **测查能力**：自控力-控制冲动
-* **相关任务**：小鱼饲养员。本题目与该题目属于同种题目，且本题目适用于10岁以上儿童。
+* **相关任务**：[小鱼饲养员](`r blogdown::shortcode("relref", "00101_Flanker.html")`)。本题目与该题目属于同种题目，且本题目适用于10岁以上儿童。
 * **参考演示**：参考美国国立卫生院的[题目设计](http://player.youku.com/embed/XMzIzMTA1NTk4NA==)。
 
 ## 交互界面
