--- a/content/post/03201_Shifting.Rmd
+++ b/content/post/03201_Shifting.Rmd
@@ -22,7 +22,7 @@ VER <- "V4"
 * **题目编号**：`r CODE`
 * **任务描述**：测查思维力，特别是灵活切换思维方式的能力。
 * **测查能力**：思维力-思维灵活性
-* **相关任务**：反应转换。本题目是反应转换的简化版本，推荐应用于1-4年级。
+* **相关任务**：[反应转换](`r blogdown::shortcode("relref", "03202_Shifting2.html")`)。本题目是反应转换的简化版本，推荐应用于1-4年级。
 
 ## 交互界面
 
