--- a/content/post/03202_Shifting2.Rmd
+++ b/content/post/03202_Shifting2.Rmd
@@ -22,7 +22,7 @@ VER <- "V4"
 * **题目编号**：`r CODE`
 * **任务描述**：测查思维力，特别是灵活切换思维方式的能力。
 * **测查能力**：思维力-思维灵活性
-* **相关任务**：思维转换。本题目适用于5年级（10岁）以上儿童，低年级请使用思维转换任务。
+* **相关任务**：[思维转换](`r blogdown::shortcode("relref", "03201_Shifting.html")`)。本题目适用于5年级（10岁）以上儿童，低年级请使用思维转换任务。
 
 ## 交互界面
 
