Modify button text of test phase

--- a/content/post/03501_pictureMemory.Rmd
+++ b/content/post/03501_pictureMemory.Rmd
@@ -38,9 +38,9 @@ VER <- "V4"
 1. 图片呈现在屏幕中央，同时下方呈现两个按钮，左侧为`是`，右侧为`否`。图片呈现时间为*2秒*。用户操作后，**按钮消失，但图片不消失**。
 1. 图片消失后，屏幕保持*0.5秒*长的空白。之后进入下一个试次。
 
-**测试阶段**。本阶段要求用户判断自己是否在学习阶段见过屏幕上呈现的图片刺激。判断的选项有`见过`，`相似`和`没见过`三种。
+**测试阶段**。本阶段要求用户判断自己是否在学习阶段见过屏幕上呈现的图片刺激。判断的选项有`旧的`，`相似`和`新的`三种。
 
-1. 图片呈现在屏幕中央，同时下方呈现三个按钮，按钮上的文字从左到右依次为`见过`，`相似`和`没见过`。图片最长呈现时间为*2秒*。用户操作后，**按钮和图片均消失**。
+1. 图片呈现在屏幕中央，同时下方呈现三个按钮，按钮上的文字从左到右依次为`旧的`，`相似`和`新的`。图片最长呈现时间为*2秒*。用户操作后，**按钮和图片均消失**。
 1. 图片消失后，屏幕保持*0.5秒*长的空白。之后进入下一个试次。
 
 **引导**。本题目在学习阶段前有对学习阶段的引导练习，需要保证用户熟悉对学习阶段的流程和操作方法。由于此处的判断没有正误之分，所以练习3次就开始正式进入学习阶段。
