Add guidance part

--- a/content/post/03501_pictureMemory.Rmd
+++ b/content/post/03501_pictureMemory.Rmd
@@ -43,7 +43,11 @@ VER <- "V4"
 1. 图片呈现在屏幕中央，同时下方呈现三个按钮，按钮上的文字从左到右依次为`旧的`，`相似`和`新的`。图片最长呈现时间为*2秒*。用户操作后，**按钮和图片均消失**。
 1. 图片消失后，屏幕保持*0.5秒*长的空白。之后进入下一个试次。
 
-**引导**。本题目在学习阶段前有对学习阶段的引导练习，需要保证用户熟悉对学习阶段的流程和操作方法。由于此处的判断没有正误之分，所以练习3次就开始正式进入学习阶段。
+**引导**。本题目在学习和测试阶段分别有引导。
+
+**学习阶段的引导和练习**。保证用户熟悉学习阶段的流程和操作方法。由于此处的判断没有正误之分，所以练习3次就开始正式的学习阶段。
+
+**测试阶段的引导和练习**。保证用户理解`旧的`，`相似`和`新的`三个选择的意义，可以使用样例图片（非学习阶段学习过的图片）分别说明。
 
 ## 详细说明
 
