Add stimuli config and operation settings

--- a/content/post/03501_pictureMemory.Rmd
+++ b/content/post/03501_pictureMemory.Rmd
@@ -51,6 +51,29 @@ VER <- "V4"
 
 ## 详细说明
 
+### 刺激
+
+本题目的所有用作刺激的图片都是日常生活中常见的物体。图片都有相似的两个版本（分别记为`a`和`b`）。图片材料的名称由刺激编号后跟上图片的版本构成，如`1a.jpg`。每一编号对应图片的两个版本的相似程度由1-5表示，数字越小则越相似。
+
+**刺激的呈现**。本题目分为学习和测试两个阶段。
+
+在学习阶段，每个试次由两部分组成。
+
+1. 刺激呈现。时间配置参数：最大呈现时间（`maxStLrn`），默认为2秒。注意用户操作后刺激也不消失。
+1. 空白屏幕。时间配置参数：试次间隔时间（`itiLrn`），默认0.5秒。
+
+在测试阶段，每个试次也由两部分组成。
+
+1. 刺激呈现。时间配置参数：最大呈现时间（`maxStTst`），默认为2秒。注意用户操作后刺激将消失。
+1. 空白屏幕。时间配置参数：试次间隔时间（`itiTst`），默认0.5秒。
+
+### 操作
+
+根据不同的设备状态，操作有所不同：
+
+* **键鼠操作**。学习阶段：要求用户必须用键盘上的左右键反应，而不能使用鼠标点击屏幕下方的按钮。键盘的左右键分别对应屏幕上的左右按钮。测试阶段：使用鼠标点击屏幕上的三个按钮进行操作。
+* **触控屏操作**。触碰屏幕下方对应的按钮即可。
+
 ### 序列配置
 
 序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)。序列中各个元素的意义：
