Add sequence configuration part

--- a/content/post/03501_pictureMemory.Rmd
+++ b/content/post/03501_pictureMemory.Rmd
@@ -78,6 +78,13 @@ VER <- "V4"
 
 序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)。序列中各个元素的意义：
 
+* `phase`：阶段。即此序列属于学习阶段（`Learn`）还是测试阶段（`Test`）。
+* `id`：图片的编号。请注意本题目图片的命名方式是三位数编号加上字母a或者b（a，b的意义即在[刺激][]一节里提到的单个图片的不同版本）。所有不足三位数的编号均在前面加了相应数目的0，如编号为`1`则命名时采用`001`。`id`和`ver`共同决定了实际应该选择哪张图片。
+* `ver`：图片的版本。即[刺激][]一节里提到的单个图片的不同版本。每一张图片命名中已包含了此信息。`id`和`ver`共同决定了实际应该选择哪张图片。
+* `sim`：图片两版本的相似程度。[刺激][]一节里已提及使用1-5刻画同一编号的两个不同版本图片的相似程度，此元素记录了这个数字。
+* `type`：测试阶段专有。该图片出现在测试阶段时的类型。`target`表示该图片在学习阶段出现过，`lure`表示该图片的另一个类似的版本在学习阶段出现过，`foil`表示该图片是全新的图片。
+* `cresp`：测试阶段专有。正确答案。`old`（和`target`对应）表示正确答案是`旧的`，`similar`（和`lure`对应）表示正确答案是`相似`，`new`（和`foil`对应）表示正确答案是`新的`。
+
 ## 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE}
