--- a/content/game/balloon.Rmd
+++ b/content/game/balloon.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 速算大师（balloon2）
+title: 速算大师（balloon）
 author: 张亮
 date: '2018-04-01'
 slug: balloon
@@ -15,7 +15,7 @@ output:
 
 ```{r basic settings, include=FALSE}
 NAME_CN <- "速算大师"
-NAME_EN <- "balloon2"
+NAME_EN <- "balloon"
 CODE <- "78"
 SDK <- 104
 VER <- "C2游戏"
@@ -44,13 +44,22 @@ VER <- "C2游戏"
 
 **关卡**。只做3个关卡，用户依次完成。第一个关卡只做两位数的**加法**，第二个关卡只做两位数的**减法**，第三个关卡则按照“**加法-减法-加法-减法-...**”的顺序来做。
 
-**序列配置**（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）。序列中各个元素的意义：
+**题库配置**。本题目提供一个表格文件，其中包含了所有可能的题目组合。表\@ref(tab:stimuli)给出了随机取出10个题目组合，其中：
 
-## 配置参数
+* `left`
+: 左侧数字
+* `right`
+: 右侧数字
+* `type`
+: 计算法则。`add`：加法，`minus`：减法。
+* `level`
+: 计算难度。`easy`：简单，`medium`：中等，`difficult`：困难。
+* `correct`, `opt1`, `opt2`, `opt3`
+: 备选选项。注意`correct`是正确答案，其他三个都是混淆的错误选项。实际呈现的时候，四个选项的位置是随机的。
 
-```{r configs, echo=FALSE, message=FALSE, warning=FALSE}
-# knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
-#              caption = "配置参数总表")
+```{r stimuli, echo=FALSE, message=FALSE, warning=FALSE}
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv")),
+             caption = "题目组合样例")
 ```
 
 ## 数据记录
@@ -64,14 +73,3 @@ VER <- "C2游戏"
 # knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
 #              caption = "原始数据变量列表")
 ```
-
-## 试题算分
-
-```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-# knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")),
-#              caption = paste0("传入参数（算分码：`", SDK, "`）"))
-```
-
-## 修订历史
-
-## 参考文献
