--- a/content/game/balloon.Rmd
+++ b/content/game/balloon.Rmd
@@ -70,6 +70,6 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv"
 * 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
-# knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
-#              caption = "原始数据变量列表")
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
+             caption = "原始数据变量列表")
 ```
