Refine the score rule

--- a/content/game/balloon.Rmd
+++ b/content/game/balloon.Rmd
@@ -36,13 +36,19 @@ VER <- "C2游戏"
 1. 修改气球大小适配两位数的显示。
 1. 修改选项数目为四个。
 1. 增加一个明显标志说明目前是做加法还是减法。
-1. 增加计分牌，显示目前得了多少分。（对一次就加一分，错一次就减一分）。
+1. 增加计分牌，显示目前得了多少分。（计分法则见[详细说明][]）
 
 ## 详细说明
 
-**数字**。使用**两位数**做素材。
+**数字**。使用**两位数**做素材（参考表\@ref(tab:stimuli)中的样例）。
 
 **关卡**。只做3个关卡，用户依次完成。第一个关卡只做两位数的**加法**，第二个关卡只做两位数的**减法**，第三个关卡则按照“**加法-减法-加法-减法-...**”的顺序来做。
+
+**计分规则**。用户起始时都为0分。对于每一道题目：
+
+* 若用户回答正确，则获得表\@ref(tab:stimuli)中设定的题目得分。
+* 若用户回答错误，则扣除1分。
+* 若用户未作答，则扣除3分。
 
 **题库配置**。本题目提供一个表格文件，其中包含了所有可能的题目组合。表\@ref(tab:stimuli)给出了随机取出10个题目组合，其中：
 
@@ -54,6 +60,8 @@ VER <- "C2游戏"
 : 计算法则。`add`：加法，`minus`：减法。
 * `level`
 : 计算难度。`easy`：简单，`medium`：中等，`difficult`：困难。
+* `score`
+: 答对题目后得分数目。
 * `correct`, `opt1`, `opt2`, `opt3`
 : 备选选项。注意`correct`是正确答案，其他三个都是混淆的错误选项。实际呈现的时候，四个选项的位置是随机的。
 
