--- a/content/game/balloon.Rmd
+++ b/content/game/balloon.Rmd
@@ -62,7 +62,7 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv"
              caption = "题目组合样例")
 ```
 
-**关卡**。只做3个关卡，用户依次完成。第一个关卡只做两位数的**加法**，第二个关卡只做两位数的**减法**，第三个关卡则按照“**加法-减法-加法-减法-...**”的顺序来做。
+**关卡**。只做3个关卡，用户依次完成。第一个关卡只做两位数的**加法**，第二个关卡只做两位数的**减法**，第三个关卡则按照“**加法-减法-加法-减法-...**”的顺序来做。每一个关卡都限时3分钟，同时每一组新的数字都是根据对应的计算法则从题库里面**不重复地随机**取出。
 
 **计分规则**。用户起始时都为0分。对于每一道题目：
 
