--- a/content/game/balloon.Rmd
+++ b/content/game/balloon.Rmd
@@ -70,10 +70,7 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv"
 
 ## 数据记录
 
-* 题目结果显示
-    + 显示正确率和平均正确反应时间
-    + 展示标准分数和超越百分比
-* 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）
+表\@ref(tab:recording-variables)说明了对于每一对数字需要记录的数据（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）。
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
