Describe UI & stimuli

--- a/content/game/firefly.Rmd
+++ b/content/game/firefly.Rmd
@@ -8,10 +8,10 @@ tasknames: "视觉短时记忆任务"
 ---
 
 ```{r basic settings, include=FALSE}
-NAME_CN <- "方向达人"
-NAME_EN <- "Flanker"
-CODE <- "00101"
-SDK <- 201
+NAME_CN <- "森林中的萤火虫"
+NAME_EN <- "VSTM"
+CODE <- "79"
+SDK <- 
 VER <- "C2"
 ```
 
@@ -20,30 +20,34 @@ VER <- "C2"
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
 * **题目编号**：`r CODE`
-* **任务描述**：测查自控力，特别是排除干扰的能力。
-* **测查能力**：自控力-控制冲动
-* **相关任务**：[小鱼饲养员](`r blogdown::shortcode("relref", "00102_Flanker2.html")`)。本题目与该题目属于同种题目，且本题目适用于10岁以上儿童。
-* **参考演示**：参考美国国立卫生院的[题目设计](http://player.youku.com/embed/XMzIzMTA1NTk4NA==)。
+* **任务描述**：测查记忆力，特别是个体视觉的短时记忆
+* **测查能力**：视觉短时记忆
+* **相关任务**：消灭敌机、雷达追踪
 
 ## 交互界面
 
-首先，屏幕中央呈现一个加号（`+`，即注视点，用于提醒用户注意屏幕中央）。一定时间（由参数控制）后，加号消失，同时屏幕中央呈现一个刺激（由**5个左右朝向的箭头**组成的图片，请查看详细参数），且屏幕下方左右分别需要*同时*呈现<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>按钮。用户需要在刺激消失（刺激呈现最长时间由参数控制）前**最中间箭头的朝向**做出操作反应。用户反应或达到刺激最大呈现时间后刺激消失，接着屏幕保持一定时间的空白（试次间隔时间）后进入下一个试次。
+夜晚森林的背景屏幕中随机位置出现几个萤火虫，其中有些会发光有些不发光（3、4、5、6、7），闪烁一定时间后萤火虫的亮光消失并且开始飞舞，最后停在新的位置，用户需要点击刚刚闪烁的萤火虫，用触摸（Android/iOS）或鼠标点击（PC）的方式。
+注意：记录用户按对的个数，但按错之后，游戏不会直接终止，而是要等用户选完了再反馈。
 
-**引导与练习**。引导两个试次：第一个刺激中间和两边都朝左，并且强调一下中间的箭头，提示用户按照中间箭头的方向进行反应；第二个刺激是中间朝右，两边朝左，不需要强调中间的箭头。引导后，随机做16个试次的练习，4种刺激（请查看详细参数）各4次。
+**引导与练习**：让被试理解要追踪发光的萤火虫
 
 ## 详细说明
 
 * 刺激
-    + **刺激配置**：由一排包含**5个朝左或朝右的箭头**的图片组成。其中：最中间的箭头为**目标刺激**，即用户需要根据该刺激确定操作方式；两侧的四个箭头为**干扰刺激**，即用户需要忽略这些刺激的干扰只对中间的箭头进行操作。详细请看下方**刺激列表**。
+    + **刺激配置**：由若干萤火虫的图片组成。其中：发光的萤火虫为**目标刺激**详细请看下方**刺激列表**。
     + **刺激呈现**
-        - 注视点符号`+`呈现时间由参数`isi`控制，默认值为`500ms`。
-        - 单个刺激呈现时间由参数`maxSt`控制，默认值为`2000ms`。
-        - 刺激消失后到下一个刺激呈现的时间间隔（试次间隔时间）由参数`iti`控制，默认值为`1000ms`。
+        - 出现若干萤火虫，其中一部分开始闪烁，闪烁时间默认值为`？？ms`。
+        - 萤火虫开始飞舞，默认值为`？？ms`。
+        - 刺激消失后到下一个刺激呈现的时间间隔（试次间隔时间）由参数`iti`控制，默认值为`？？ms`。
+    + **序列**
+        - 单个试次要呈现的闪烁的萤火虫个数有5种情况，3~7个（相对应的萤火虫总数？
+        - 正式测评中总计15次，每种情况3次
+        - 练习总计5次，每种情况1次
 
 ```{r stimuli, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv")),
              caption = "刺激列表")
-```
+
 
 * 操作
     + **操作方式**
