Modify format of some parts

--- a/content/game/firefly.Rmd
+++ b/content/game/firefly.Rmd
@@ -5,14 +5,16 @@ date: 2018-04-02
 slug: 79-VSTM
 code: "79"
 tasknames: "视觉短时记忆任务"
+output:
+  blogdown::html_page:
+    toc: true
+    md_extensions: -ascii_identifiers
 ---
 
 ```{r basic settings, include=FALSE}
 NAME_CN <- "森林中的萤火虫"
 NAME_EN <- "VSTM"
 CODE <- "79"
-SDK <- 
-VER <- "C2"
 ```
 
 ## 基本信息
@@ -33,32 +35,35 @@ VER <- "C2"
 
 ## 详细说明
 
-* 刺激
-    + **刺激配置**：由若干萤火虫的图片组成。其中：发光的萤火虫为**目标刺激**详细请看下方**刺激列表**。
-    + **刺激呈现**
-        - 出现若干萤火虫，其中一部分开始闪烁，闪烁时间默认值为`？？ms`。
-        - 萤火虫开始飞舞，默认值为`？？ms`。
-        - 刺激消失后到下一个刺激呈现的时间间隔（试次间隔时间）由参数`iti`控制，默认值为`？？ms`。
-    + **序列**
-        - 单个试次要呈现的闪烁的萤火虫个数有5种情况，3~7个（相对应的萤火虫总数？
-        - 正式测评中总计15次，每种情况3次
-        - 练习总计5次，每种情况1次
+### 刺激
 
-* 操作
-    + **操作方式**
-        - **`Android/iOS`**：点击触摸屏下方的<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>按钮进行反应，即箭头朝左则点击按钮<kbd>&larr;</kbd>，箭头朝右则点击按钮<kbd>&rarr;</kbd>。
-        - **`PC/Web`**：若`PC`拥有触摸屏，则用户可以使用`Android/iOS`的操作方式；若`PC`没有触摸屏，则要求用户使用标准输入设备键盘上的<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>进行操作，分别表示按钮<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>。
-    + **判断正误**：所有试次都需要操作，没有操作则使用`-1`（参靠“标准.html”）表示正确与否。当用户操作后，如果与中间箭头朝向一致，则为正确；否则为错误。
-    + **反馈**
-        - 引导练习：需要对*正确*和*错误*给出听觉和视觉反馈。
-        - 正式测试：不需要对*正确*和*错误*给出听觉和视觉反馈，需要对用户是否操作给出听觉和视觉反馈（即达到最大显示时间后用户还未操作时，需要给出负性的声音和视觉反馈；只要用户操作了，则给出中性的声音和视觉反馈）。
++ **刺激配置**：由若干萤火虫的图片组成。其中：发光的萤火虫为**目标刺激**详细请看下方**刺激列表**。
++ **刺激呈现**
+    - 出现若干萤火虫，其中一部分开始闪烁，闪烁时间默认值为`？？ms`。
+    - 萤火虫开始飞舞，默认值为`？？ms`。
+    - 刺激消失后到下一个刺激呈现的时间间隔（试次间隔时间）由参数`iti`控制，默认值为`？？ms`。
++ **序列**
+    - 单个试次要呈现的闪烁的萤火虫个数有5种情况，3~7个（相对应的萤火虫总数？
+    - 正式测评中总计15次，每种情况3次
+    - 练习总计5次，每种情况1次
 
-* 序列配置（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
-    + 采用`json`字符串传输序列配置。其中单个`json`对象由以下`名称/值`配对组成：
-        - `length`：表示序列的长度
-        - `stim`：包含了由**刺激编号**（和*“刺激列表”*一致）组成的多个序列
-        - `cresp`：包含了由**正确答案**组成的多个序列，可能值为`Left`和`Right`
-        - `type`：包含了由**刺激类型**（即“一致(`Congruent`)”或“不一致(`Incongruent`)”）组成的多个序列
+### 操作
+
++ **操作方式**
+    - **`Android/iOS`**：点击触摸屏下方的<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>按钮进行反应，即箭头朝左则点击按钮<kbd>&larr;</kbd>，箭头朝右则点击按钮<kbd>&rarr;</kbd>。
+    - **`PC/Web`**：若`PC`拥有触摸屏，则用户可以使用`Android/iOS`的操作方式；若`PC`没有触摸屏，则要求用户使用标准输入设备键盘上的<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>进行操作，分别表示按钮<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>。
++ **判断正误**：所有试次都需要操作，没有操作则使用`-1`（参靠“标准.html”）表示正确与否。当用户操作后，如果与中间箭头朝向一致，则为正确；否则为错误。
++ **反馈**
+    - 引导练习：需要对*正确*和*错误*给出听觉和视觉反馈。
+    - 正式测试：不需要对*正确*和*错误*给出听觉和视觉反馈，需要对用户是否操作给出听觉和视觉反馈（即达到最大显示时间后用户还未操作时，需要给出负性的声音和视觉反馈；只要用户操作了，则给出中性的声音和视觉反馈）。
+
+### 序列配置（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
+
++ 采用`json`字符串传输序列配置。其中单个`json`对象由以下`名称/值`配对组成：
+    - `length`：表示序列的长度
+    - `stim`：包含了由**刺激编号**（和*“刺激列表”*一致）组成的多个序列
+    - `cresp`：包含了由**正确答案**组成的多个序列，可能值为`Left`和`Right`
+    - `type`：包含了由**刺激类型**（即“一致(`Congruent`)”或“不一致(`Incongruent`)”）组成的多个序列
 
 ## 配置参数
 
@@ -78,14 +83,3 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv"
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
              caption = "原始数据变量列表")
 ```
-
-## 试题算分
-
-* 算分码：`r SDK`
-* 传入参数：
-
-```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")))
-```
-
-## 修订历史
