Delete unrelated task

--- a/content/game/firefly.Rmd
+++ b/content/game/firefly.Rmd
@@ -24,7 +24,7 @@ CODE <- "79"
 * **题目编号**：`r CODE`
 * **任务描述**：测查记忆力，特别是个体视觉的短时记忆
 * **测查能力**：视觉短时记忆
-* **相关任务**：消灭敌机、雷达追踪
+* **相关任务**：雷达追踪
 
 ## 交互界面
 
