Add specification of number of gaming runs

--- a/content/game/homing.Rmd
+++ b/content/game/homing.Rmd
@@ -40,7 +40,7 @@ knitr::include_graphics("/images/homing/ui.png")
 
 **“家”和“游乐园”**。如图\@ref(fig:user-interface)，屏幕左侧是类似于“蜂巢”的若干个（个数和小动物个数相等）六边形，这些六边形即为小动物的“家”；屏幕右侧是一个矩形草坪，即小动物的“游乐园”。
 
-每一次游戏中，都分为**学习**和**测试**两个阶段。
+每一轮游戏都分为**学习**和**测试**两个阶段。玩家需要重复完成三轮游戏。
 
 * **学习阶段**。即“小动物离家玩耍”。按照随机顺序，所有六边形都会依次：1）显示一张小动物图片（不重复）；2）小动物图片立即向右侧“游乐园”的一个随机位置移动并停下（前后的小动物图片不能重叠）。
 
