Add primitive detail description texts

--- a/content/game/homing.Rmd
+++ b/content/game/homing.Rmd
@@ -47,3 +47,13 @@ knitr::include_graphics("/images/homing/ui.png")
 * **测试阶段**。即“帮小动物回家”。目前所有的小动物图片都随机放到右侧的矩形（“游乐园”）里了，玩家需要将这些小动物图片全部放回到原来所属的六边形（“家”）里去。
 
 **引导**。引导时只需要完成和正式游戏不同的两个小动物回家的任务，保证玩家理解操作游戏过程和操作方法。
+
+# 详细说明
+
+## 刺激
+
+需设计15个不同物种小动物的图片以备使用， 且不同图片要可以明显区分开。
+
+## 流程
+
+每一轮游戏中。
