Specify operation mode

--- a/content/game/firefly.Rmd
+++ b/content/game/firefly.Rmd
@@ -59,12 +59,12 @@ knitr::include_graphics("/images/VSTM/firefly.png")
 ### 操作
 
 + **操作方式**
-    - **`Android/iOS`**：点击触摸屏下方的<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>按钮进行反应，即箭头朝左则点击按钮<kbd>&larr;</kbd>，箭头朝右则点击按钮<kbd>&rarr;</kbd>。
-    - **`PC/Web`**：若`PC`拥有触摸屏，则用户可以使用`Android/iOS`的操作方式；若`PC`没有触摸屏，则要求用户使用标准输入设备键盘上的<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>进行操作，分别表示按钮<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>。
-+ **判断正误**：所有试次都需要操作，没有操作则使用`-1`（参靠“标准.html”）表示正确与否。当用户操作后，如果与中间箭头朝向一致，则为正确；否则为错误。
+    - **`Android/iOS`**：点击触摸上的目标刺激，感应区域要比目标刺激本身大，但不能重合。
+    - **`PC/Web`**：若`PC`拥有触摸屏，则用户可以使用`Android/iOS`的操作方式；若`PC`没有触摸屏，则要求用户使用标准输入设备鼠标点击进行操作。
++ **判断正误**：所有试次都需要操作，没有操作则使用`-1`（参靠“标准.html”）表示正确与否。当用户操作后，如果点击的目标和目标刺激重合，则为正确；若点击与目标刺激不符，则为错；与点击顺序无关。
 + **反馈**
     - 引导练习：需要对*正确*和*错误*给出听觉和视觉反馈。
-    - 正式测试：不需要对*正确*和*错误*给出听觉和视觉反馈，需要对用户是否操作给出听觉和视觉反馈（即达到最大显示时间后用户还未操作时，需要给出负性的声音和视觉反馈；只要用户操作了，则给出中性的声音和视觉反馈）。
+    - 正式测试：不需要对*正确*和*错误*给出听觉和视觉反馈，需要对用户是否操作给出视觉反馈（即用户点击的地方就变亮）
 
 ### 序列配置（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
 
