--- a/content/game/firefly.Rmd
+++ b/content/game/firefly.Rmd
@@ -31,11 +31,11 @@ CODE <- "79"
 夜晚森林的背景屏幕中随机位置出现几个萤火虫，其中有些会发光有些不发光（发光的个数3、4、5、6、7），闪烁一定时间后萤火虫的亮光消失并且开始飞舞，最后停在新的位置，用户需要点击刚刚闪烁的萤火虫，用触摸（Android/iOS）或鼠标点击（PC）的方式。
 注意：记录用户按对的个数，但按错之后，游戏不会直接终止，而是要等用户选完了再反馈。
 
-```{r taskflow-image, fig.cap="基本流程[^1]", fig.align='center', echo=FALSE}
+```{r taskflow-image, fig.cap="基本界面", fig.align='center', echo=FALSE}
 knitr::include_graphics("/images/VSTM/firefly.png")
 ```
 
-图\@ref(fig:taskflow-image)展示了基本流程：
+图\@ref(fig:taskflow-image)展示了基本界面。
 
 **引导与练习**：让被试理解要追踪发光的萤火虫
 
@@ -43,12 +43,12 @@ knitr::include_graphics("/images/VSTM/firefly.png")
 
 ### 刺激
 
-+ **刺激配置**：由若干萤火虫的图片组成。其中：发光的萤火虫为**目标刺激**不发光的为**干扰刺激**详细请看下方**刺激列表**。
++ **刺激配置**：由若干萤火虫的图片组成。其中：发光的萤火虫为**目标刺激**，不发光的为**干扰刺激**，详细请看下方**刺激列表**。
 + **刺激呈现**
     - 出现若干萤火虫（不同的目标刺激对应不同的干扰刺激），其中目标开始闪烁，闪烁时间默认值为`xx ms`。
     - 闪烁结束，所有萤火虫开始飞舞，默认值为`xx ms`。
     - 飞舞结束，所有萤火虫停到新的位置，用户开始判断，哪些是之前闪烁过的萤火虫，默认选择最长时间为`xx ms`。
-    - 刺激消失后到下一个刺激呈现的时间间隔（试次间隔时间）由参数`iti`控制，默认值为`xx ms`。
+    - 刺激消失后到下一个刺激呈现的时间间隔（试次间隔时间）由参数`xxx`控制，默认值为`xx ms`。
 + **序列**
     - 单个试次要呈现的闪烁的萤火虫个数有5种情况，3~7个（相对应的萤火虫总数？
     - 正式测评中总计15次，每种情况3次
