--- a/content/game/firefly.Rmd
+++ b/content/game/firefly.Rmd
@@ -45,40 +45,36 @@ knitr::include_graphics("/images/VSTM/firefly.png")
 
 + **刺激配置**：由若干萤火虫的图片组成。其中：发光的萤火虫为**目标刺激**，不发光的为**干扰刺激**，详细请看下方**刺激列表**。
 + **刺激呈现**
-    - 出现若干萤火虫（不同的目标刺激对应不同的干扰刺激），其中目标开始闪烁，闪烁时间默认值为`xx ms`。
-    - 闪烁结束，所有萤火虫开始飞舞，默认值为`xx ms`。
-    - 飞舞结束，所有萤火虫停到新的位置，用户开始判断，哪些是之前闪烁过的萤火虫，默认选择最长时间为`xx ms`。
-    - 刺激消失后到下一个刺激呈现的时间间隔（试次间隔时间）由参数`xxx`控制，默认值为`xx ms`。
-+ **序列**
-    - 单个试次要呈现的闪烁的萤火虫个数有5种情况，3~7个（相对应的萤火虫总数？
-    - 正式测评中总计15次，每种情况3次
-    - 练习总计5次，每种情况1次
-+ **干扰刺激**
-    - 干扰刺激与目标刺激的对应：参照雷达追踪任务
+    - 出现若干萤火虫（不同的目标刺激对应不同的干扰刺激），其中目标开始闪烁，闪烁次数默认值为3次，每次闪烁时间默认值为`300 ms`。
+    - 闪烁结束，所有萤火虫开始飞舞，默认值为`3000 ms`，速度为30。
+    - 飞舞结束，所有萤火虫停到新的位置，用户开始判断，哪些是之前闪烁过的萤火虫，用户点击次数需与目标个数一致，方可开始下一轮。
+    - 刺激消失后到下一个刺激呈现的时间间隔（试次间隔时间）默认值为`500 ms`。
 
 ### 操作
 
 + **操作方式**
     - **`Android/iOS`**：点击触摸上的目标刺激，感应区域要比目标刺激本身大，但不能重合。
     - **`PC/Web`**：若`PC`拥有触摸屏，则用户可以使用`Android/iOS`的操作方式；若`PC`没有触摸屏，则要求用户使用标准输入设备鼠标点击进行操作。
-+ **判断正误**：所有试次都需要操作，没有操作则使用`-1`（参靠“标准.html”）表示正确与否。当用户操作后，如果点击的目标和目标刺激重合，则为正确；若点击与目标刺激不符，则为错；与点击顺序无关。
++ **判断正误**：所有试次都需要操作，没有操作则使用`-1`表示正确与否。当用户操作后，如果点击的目标和目标刺激重合，则为正确；若点击与目标刺激不符，则为错；与点击顺序无关。
 + **反馈**
     - 引导练习：需要对*正确*和*错误*给出听觉和视觉反馈。
     - 正式测试：不需要对*正确*和*错误*给出听觉和视觉反馈，需要对用户是否操作给出视觉反馈（即用户点击的地方就变亮）
 
 ### 序列配置（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
 
-+ 采用`json`字符串传输序列配置。其中单个`json`对象由以下`名称/值`配对组成：
-    - `length`：表示序列的长度
-    - `stim`：包含了由**刺激编号**（和*“刺激列表”*一致）组成的多个序列
-    - `cresp`：包含了由**正确答案**组成的多个序列，可能值为`Left`和`Right`
-    - `type`：包含了由**刺激类型**（即“一致(`Congruent`)”或“不一致(`Incongruent`)”）组成的多个序列
+<!--
++ **序列**
+    - 单个试次要呈现的闪烁的萤火虫个数有5种情况，3~7个，干扰的不发光的萤火虫数量比发光的多两个，总共2n+2
+    - 正式测评中总计15次，每种情况3次（待定）
+    - 做对了加一个目标刺激，做错两次减一个，错一次不变
+    - 练习2个萤火虫的情况，1次
+-->
 
 ## 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
-             caption = "配置参数总表")
+# knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
+#             caption = "配置参数总表")
 ```
 
 ## 数据记录
@@ -89,6 +85,6 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv"
 * 提交原始数据如下表（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
-             caption = "原始数据变量列表")
+# knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
+#             caption = "原始数据变量列表")
 ```
