--- a/content/game/firefly.Rmd
+++ b/content/game/firefly.Rmd
@@ -31,7 +31,7 @@ CODE <- "79"
 夜晚森林的背景屏幕中随机位置出现几个萤火虫，其中有些会发光有些不发光（发光的个数3、4、5、6、7），闪烁一定时间后萤火虫的亮光消失并且开始飞舞，最后停在新的位置，用户需要点击刚刚闪烁的萤火虫，用触摸（Android/iOS）或鼠标点击（PC）的方式。
 注意：记录用户按对的个数，但按错之后，游戏不会直接终止，而是要等用户选完了再反馈。
 
-```{r taskflow-image, fig.cap="基本界面", fig.align='center', echo=FALSE}
+```{r taskflow-image, fig.cap="基本界面", fig.align='center', echo=FALSE, out.width="80%"}
 knitr::include_graphics("/images/VSTM/firefly.png")
 ```
 
