--- a/content/game/calculator.Rmd
+++ b/content/game/calculator.Rmd
@@ -1,8 +1,8 @@
 ---
-title: 速算大师（balloon）
+title: 速算师（calculator）
 author: 张亮
 date: '2018-04-01'
-slug: balloon
+slug: calculator
 code: 78
 tasknames: 数学计算
 output:
@@ -12,63 +12,65 @@ output:
 ---
 
 ```{r basic settings, include=FALSE}
-NAME_CN <- "速算大师"
-NAME_EN <- "balloon"
+NAME_CN <- "速算师"
+NAME_EN <- "calculator"
 CODE <- "78"
-SDK <- 104
-VER <- "C2游戏"
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
 * **题目编号**：`r CODE`
 * **任务描述**：根据算术法则快速计算，训练更新加工信息的能力。
-* **相关任务**：速算师（交互式题目）、速算大师（C2游戏）。
+* **相关任务**：一站到底（C2游戏）。
 
-## 交互界面
+# 交互界面
 
-以现有的C2游戏**速算大师**为准。需作如下**调整**：
+以现有的C2游戏**一站到底**为准。需作如下**调整**：
 
-1. 修改气球大小适配两位数的显示。
-1. 修改选项数目为四个。
-1. 增加一个明显标志说明目前是做加法还是减法。
-1. 增加计分牌，显示目前得了多少分。（计分法则见[详细说明][]）
+1. 去掉“选择角色过程”和“竞争对手”。
+1. 针对四选一的选择题优化题目展示的界面。
+1. 增加计分牌，显示目前得了多少分。（详情见[计分规则][]）
 
-## 详细说明
+# 详细说明
 
-**数字**。使用**两位数**做素材（参考表\@ref(tab:stimuli)中的样例）。
+## 题库配置
 
-**题库配置**。本题目提供一个表格文件，其中包含了所有可能的题目组合。表\@ref(tab:stimuli)给出了随机取出10个题目组合，其中：
+本题目提供一个[题库文件](/seq/calculator/itembank.csv)，其中包含了所有可能的题目组合。表\@ref(tab:stimuli)给出了随机取出10个题目组合，其中：
 
-* `left`
-: 左侧数字
-* `right`
-: 右侧数字
-* `type`
-: 计算法则。`add`：加法，`minus`：减法。
-* `level`
-: 计算难度。`easy`：简单，`medium`：中等，`difficult`：困难。
-* `score`
-: 答对题目后得分数目。
-* `correct`, `opt1`, `opt2`, `opt3`
-: 备选选项。注意`correct`是正确答案，其他三个都是混淆的错误选项。实际呈现的时候，四个选项的位置是随机的。
+* `title`：题面
+* `type`：计算法则。`add`：加法，`minus`：减法
+* `difficulty`：难度系数（1-3，可优化）
+* `correct`, `opt1`, `opt2`, `opt3`：备选选项。注意`correct`是正确答案，其他三个都是混淆的错误选项。实际呈现的时候，四个选项的位置是随机的。
 
 ```{r stimuli, echo=FALSE, message=FALSE, warning=FALSE}
-knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv")),
-             caption = "题目组合样例")
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "itembank_sample.csv")),
+             caption = "题库样例")
 ```
 
-**关卡**。只做3个关卡，用户依次完成。第一个关卡只做两位数的**加法**，第二个关卡只做两位数的**减法**，第三个关卡则按照“**加法-减法-加法-减法-...**”的顺序来做。每一个关卡都限时3分钟，同时每一组新的数字都是根据对应的计算法则从题库里面**不重复地随机**取出。
+## 流程
 
-**计分规则**。用户起始时都为0分。对于每一道题目：
+本题目可以有**测评**或**训练**两种目的。
 
-* 若用户回答正确，则获得表\@ref(tab:stimuli)中设定的题目得分。
+**测评**。一共完成三轮，刺激顺序和提供的[序列文件](/seq/calculator/sequence.csv)一致。序列文件表中相对于题库而言多出一列字段`run`，其中`R1``R2``R3`分别表示三个轮次；每个伦茨根据序列中一行一行地依次进行，总限时2分钟。
+
+**训练**。分为3种关卡：
+
+* 只做**加法**；
+* 只做**减法**；
+* 按照“**加法-减法-加法-减法-...**”的顺序来做。
+
+每一种关卡都限时2分钟，同时每一组新的数字都是根据对应的计算法则从[题库](#题库配置)里面**不重复地随机**取出。
+
+## 计分规则
+
+用户起始时都为100分。每道题目没有答题时间限制，而且
+
+* 若用户回答正确，则获得1分。
 * 若用户回答错误，则扣除1分。
-* 若用户未作答，则扣除3分。
 
-## 数据记录
+# 数据记录
 
 表\@ref(tab:recording-variables)说明了对于每一对数字需要记录的数据（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）。
 
