Add primitive task flow design

--- a/content/game/butterfly.Rmd
+++ b/content/game/butterfly.Rmd
@@ -26,3 +26,7 @@ CODE <- "80"
 * **题目编号**：`r CODE`
 * **任务描述**：找出蝴蝶隐藏的位置，训练工作记忆
 * **测查能力**：自控力-信息更新
+
+# 交互流程
+
+[点击此处](/generated/butterfly/start.html)查看初步的交互流程设计。
