--- a/content/game/calculator.Rmd
+++ b/content/game/calculator.Rmd
@@ -22,7 +22,7 @@ CODE <- "78"
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
 * **题目编号**：`r CODE`
-* **任务描述**：根据算术法则快速计算，训练更新加工信息的能力。
+* **任务描述**：根据算术法则快速计算，训练工作记忆能力。
 * **相关任务**：一站到底（C2游戏）。
 
 # 交互界面
@@ -37,7 +37,7 @@ CODE <- "78"
 
 ## 题库配置
 
-本题目提供一个[题库文件](/seq/calculator/itembank.csv)，其中包含了所有可能的题目组合。表\@ref(tab:stimuli)给出了随机取出10个题目组合，其中：
+本题目提供一个[题库文件](/seq/calculator/itembank.csv)，其中包含了所有可能的题目（样例参考表\@ref(tab:stimuli)）。其中：
 
 * `title`：题面
 * `type`：计算法则。`add`：加法，`minus`：减法
