--- a/content/post/03501_pictureMemory.Rmd
+++ b/content/post/03501_pictureMemory.Rmd
@@ -88,8 +88,8 @@ VER <- "V4"
 ## 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE}
-# knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
-#              caption = "配置参数总表")
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
+             caption = "配置参数总表")
 ```
 
 ## 数据记录
@@ -100,8 +100,8 @@ VER <- "V4"
 * 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
-# knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
-#              caption = "原始数据变量列表")
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
+             caption = "原始数据变量列表")
 ```
 
 ## 试题算分
@@ -110,7 +110,3 @@ VER <- "V4"
 # knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")),
 #              caption = paste0("传入参数（算分码：`", SDK, "`）"))
 ```
-
-## 修订历史
-
-## 参考文献
