--- a/content/game/firefly.Rmd
+++ b/content/game/firefly.Rmd
@@ -15,9 +15,10 @@ output:
 NAME_CN <- "森林中的萤火虫"
 NAME_EN <- "VSTM"
 CODE <- "79"
+SDK <- 999
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
@@ -26,7 +27,7 @@ CODE <- "79"
 * **测查能力**：视觉短时记忆
 * **相关任务**：雷达追踪
 
-## 交互界面
+# 交互界面
 
 夜晚森林的背景屏幕中随机位置出现几个萤火虫，其中有些会发光有些不发光（发光的个数3、4、5、6、7），闪烁一定时间后萤火虫的亮光消失并且开始飞舞，最后停在新的位置，用户需要点击刚刚闪烁的萤火虫，用触摸（Android/iOS）或鼠标点击（PC）的方式（如图\@ref(fig:taskflow-image)）。
 
@@ -36,9 +37,9 @@ knitr::include_graphics("/images/VSTM/firefly.png")
 
 **引导与练习**：让被试理解要追踪发光的萤火虫
 
-## 详细说明
+# 详细说明
 
-### 刺激
+## 刺激
 
 + **刺激配置**：由若干萤火虫的图片组成。其中：发光的萤火虫为**目标刺激**，不发光的为**干扰刺激**，详细请看下方**刺激列表**。
 + **刺激呈现**
@@ -47,7 +48,7 @@ knitr::include_graphics("/images/VSTM/firefly.png")
     - 飞舞结束，所有萤火虫停到新的位置，用户开始判断，哪些是之前闪烁过的萤火虫，用户点击次数需与目标个数一致，方可开始下一轮。
     - 刺激消失后到下一个刺激呈现的时间间隔（试次间隔时间）默认值为`500 ms`。
 
-### 操作
+## 操作
 
 + **操作方式**
     - **`Android/iOS`**：点击触摸上的目标刺激，感应区域要比目标刺激本身大，但不能重合。
@@ -57,7 +58,7 @@ knitr::include_graphics("/images/VSTM/firefly.png")
     - 引导练习：需要对*正确*和*错误*给出听觉和视觉反馈。
     - 正式测试：不需要对*正确*和*错误*给出听觉和视觉反馈，需要对用户是否操作给出视觉反馈（即用户点击的地方就变亮）
 
-### 序列配置（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
+## 序列配置（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
 
 <!--
 + **序列**
@@ -67,21 +68,34 @@ knitr::include_graphics("/images/VSTM/firefly.png")
     - 练习2个萤火虫的情况，1次
 -->
 
-## 配置参数
+# 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-# knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
-#             caption = "配置参数总表")
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
+             caption = "配置参数总表")
 ```
 
-## 数据记录
+# 数据记录
 
-* 题目结果显示
-    + 显示正确率和平均正确反应时间
-    + 展示标准分数和超越百分比
+## 结果显示
+
+* 显示用户得分
+* 展示标准分数和超越百分比
+
+## 提交数据
+
 * 提交原始数据如下表（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-# knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
-#             caption = "原始数据变量列表")
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
+             caption = "原始数据变量列表")
+```
+
+# 试题算分
+
+* 算分码：`r SDK`
+* 传入参数：
+
+```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")))
 ```
