--- a/content/game/calculator.Rmd
+++ b/content/game/calculator.Rmd
@@ -53,7 +53,7 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "itembank_sam
 
 本题目可以有**测评**或**训练**两种目的。
 
-**测评**。一共完成三轮，刺激顺序和提供的[序列文件](/seq/calculator/sequence.csv)一致。序列文件表中相对于题库而言多出一列字段`run`，其中`R1``R2``R3`分别表示三个轮次；每个伦茨根据序列中一行一行地依次进行，总限时2分钟。
+**测评**。一共完成三轮，刺激顺序和提供的[序列文件](/seq/calculator/sequence.csv)一致。序列文件表中相对于题库而言多出一列字段`run`，其中`R1`、`R2`、`R3`分别表示三个轮次；每个轮次根据序列中一行一行地依次进行，总限时2分钟。
 
 **训练**。分为3种关卡：
 
