--- a/content/game/calculator.Rmd
+++ b/content/game/calculator.Rmd
@@ -47,8 +47,40 @@ SDK <- 999
 * `run`：表示轮次（请查看[流程][]）。序列文件中专有。
 * `title`：题面
 * `type`：计算法则。`add`：加法，`minus`：减法
-* `difficulty`：难度系数（1-3，可优化）
-* `correct`, `opt1`, `opt2`, `opt3`：备选选项。注意`correct`是正确答案，其他三个都是混淆的错误选项。实际呈现的时候，四个选项的位置是随机的。
+
+## 选项配置
+
+本游戏所有题目都配置四个选项，其中一个为正确选项，其余三个为干扰选项。实际呈现时，所有选项都是随机排列的。干扰选项的生成规则如下：
+
+### 加法干扰选项
+
+* 选项1：根据两数之和的个位数来确定。
+
+    + 若两数之和的个位数为0-4，则选项1为正确答案+1；
+    + 若两数之和的个位数为5-9，则选项1为正确答案-1。
+
+* 选项2：正确答案+10。
+
+* 选项3：正确答案-10。
+
+### 减法干扰选项
+
+* 选项1：设被减数和减数的十位数之差为$X$，被减数和减数的个位数之差为$Y$（注意可能为负数），正确答案为$Z$。
+
+    + 若$X = 0$且$Y > 0$[^1]，则选项1为$10 - Y$。
+    + 若$X > 0$且$Y \neq 0$，则选项1为$Z - 2Y$。
+    + 若$X > 0$且$Y = 0$，则选项1为$Z + [Z / 10]$[^2]。
+
+[^1]: 注意此时$Y$必然比0大。
+[^2]: 注意$[]$表示取整，例如$[2.6] = 2$，那么$[Z / 10]$实际上就是$Z$的十位数。
+
+* 选项2：正确答案+10。
+
+* 选项3：设被减数和减数的十位数之差为$X$，被减数和减数的个位数之差为$Y$（注意可能为负数），正确答案为$Z$。
+
+    + 若$Z$是两位数，则选项3为$Z - 10$。
+    + 若$Z$是一位数且$Y > 0$，则选项3为$20 - Y$。
+    + 若$Z$是一位数且$Y < 0$，则选项3为$10 - Z$。
 
 ## 流程
 
