Stress the stochastic display of options

--- a/content/game/calculator.Rmd
+++ b/content/game/calculator.Rmd
@@ -50,7 +50,7 @@ SDK <- 999
 
 ## 选项配置
 
-本游戏所有题目都配置四个选项，其中一个为正确选项，其余三个为干扰选项。实际呈现时，所有选项都是随机排列的。干扰选项的生成规则如下：
+本游戏所有题目都配置四个选项，其中一个为正确选项，其余三个为干扰选项。实际呈现时，所有选项都是**随机排列**的。干扰选项的生成规则如下：
 
 ### 加法干扰选项
 
