Add details on stimuli and sequence

--- a/content/game/butterfly.Rmd
+++ b/content/game/butterfly.Rmd
@@ -30,3 +30,19 @@ CODE <- "80"
 # 交互流程
 
 [点击此处](/axure-rp-design/butterfly/start.html){target="_blank"}查看交互流程设计。
+
+# 详细说明
+
+## 刺激
+
+使用**蝴蝶**作为基本的刺激材料。蝴蝶的形状简单一点，使得用户可以很容易地判断是否对称。
+
+总计需设计`40`张张不同的蝴蝶图片，其中
+
+* 引导和练习部分需要设计`4`（2张引导，2张练习）张不同的蝴蝶图片，对称的和不对称的各占一半。对称的编号为`ps01`--`ps02`，不对称的编号为`pn01`--`pn02`。
+* 正式测评部分需要设计`36`张不同的蝴蝶图片，对称的和不对称的各占一半。对称的18张蝴蝶图片编号为`s01`--`s18`，不对称的18张图片编号为`n01`--`n18`。
+
+## 序列
+
+* 引导和练习都只需要呈现2张（1张对称、1张不对称）蝴蝶图片进行记忆。
+* 正式测评按随机顺序分别呈现3、4、5、6张蝴蝶图片进行记忆。实际的序列将在后面给出。
