Fix wrong task name

--- a/content/fix/00202_digitalDesc.Rmd
+++ b/content/fix/00202_digitalDesc.Rmd
@@ -4,7 +4,7 @@ author: 张亮
 date: '2018-04-12'
 slug: 00202-digital-desc
 code: "00202"
-tasknames: "简单反应时"
+tasknames: "数字记忆广度"
 output:
   blogdown::html_page:
     toc: true
