Add description of the sequence settings

--- a/content/game/butterfly.Rmd
+++ b/content/game/butterfly.Rmd
@@ -44,7 +44,10 @@ SDK <- 999
 ## 序列
 
 * 引导和练习都只需要呈现2张（1张对称、1张不对称）蝴蝶图片进行记忆。
-* 正式测评按随机顺序分别呈现3、4、5、6张蝴蝶图片进行记忆。实际的序列将在后面给出。
+* 正式测评按随机顺序分别呈现3、4、5、6张蝴蝶图片进行记忆。[序列文件](/seq/butterfly.json)中包含以下值：
+    + `slen`：当前轮次需要呈现的蝴蝶个数（3-6中的一个）。
+    + `sym`：当前轮次先后呈现的蝴蝶是否对称，其中`s`代表对称，`n`代表不对称。例如`nsn`就表示现后呈现的三张蝴蝶照片依次是**不对称**、**对称**、**不对称**。
+    + `loc`：当前轮次先后呈现的蝴蝶飞入网格后停留的位置，使用16进制数字表示（参考设计中的图）。例如`148`就表示先后呈现的蝴蝶位置分别为1号、4号、8号网格。
 
 # 配置参数
 
