Ensure header levels start from 1

--- a/content/fix/00202_digitalDesc.Rmd
+++ b/content/fix/00202_digitalDesc.Rmd
@@ -18,7 +18,7 @@ CODE <- "00202"
 SDK <- 301
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
@@ -26,14 +26,14 @@ SDK <- 301
 * **任务描述**：测查自控力，特别是根据需要操纵头脑中存储的信息的能力
 * **测查能力**：自控力-信息更新
 
-## 数据记录
+# 数据记录
 
-### 结果显示
+## 结果显示
 
 + 显示最多能正确倒背出来的数字数目
 + 展示标准分数和超越百分比
 
-### 数据提交
+## 数据提交
 
 表\@ref(tab:recording-variables)说明了对于每一个试次需要记录的数据（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）。
 
