--- a/content/fix/01201_PVTAdult.Rmd
+++ b/content/fix/01201_PVTAdult.Rmd
@@ -18,7 +18,7 @@ CODE <- "01201"
 SDK <- 200
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
@@ -26,14 +26,14 @@ SDK <- 200
 * **任务描述**：测查反应力，特别是指个体对外界信号做出快速反应的能力
 * **测查能力**：反应力-反应速度
 
-## 数据记录
+# 数据记录
 
-### 结果显示
+## 结果显示
 
 + 显示最快的一次的反应时间
 + 展示标准分数和超越百分比
 
-### 数据提交
+## 数据提交
 
 表\@ref(tab:recording-variables)说明了对于每一个试次需要记录的数据（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）。
 
