--- a/content/fix/02701_numerosity.Rmd
+++ b/content/fix/02701_numerosity.Rmd
@@ -18,7 +18,7 @@ CODE <- "02701"
 SDK <- 999
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
@@ -26,14 +26,14 @@ SDK <- 999
 * **任务描述**：测查大脑的数量感知能力。
 * **测查能力**：数学-数量加工
 
-## 数据记录
+# 数据记录
 
-### 结果显示
+## 结果显示
 
 + 显示正确判断的个数
 + 展示标准分数和超越百分比
 
-### 数据提交
+## 数据提交
 
 表\@ref(tab:recording-variables)说明了对于每一个试次需要记录的数据（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）。
 
