--- a/content/post/03501_pictureMemory.Rmd
+++ b/content/post/03501_pictureMemory.Rmd
@@ -19,7 +19,7 @@ SDK <- 102
 VER <- "V4"
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
@@ -27,7 +27,7 @@ VER <- "V4"
 * **任务描述**：测查记忆力，特别是个体记住各种图片信息的能力。
 * **测查能力**：记忆力-语义记忆
 
-## 交互界面
+# 交互界面
 
 <!--本题目的交互方式需要修改-->
 
@@ -49,9 +49,9 @@ VER <- "V4"
 
 **测试阶段的引导和练习**。保证用户理解`旧的`，`相似`和`新的`三个选择的意义，可以使用样例图片（非学习阶段学习过的图片）分别说明。
 
-## 详细说明
+# 详细说明
 
-### 刺激
+## 刺激
 
 本题目的所有用作刺激的图片都是日常生活中常见的物体。图片都有相似的两个版本（分别记为`a`和`b`）。图片材料的名称由刺激编号后跟上图片的版本构成，如`1a.jpg`。每一编号对应图片的两个版本的相似程度由1-5表示，数字越小则越相似。
 
@@ -67,14 +67,14 @@ VER <- "V4"
 1. 刺激呈现。时间配置参数：最大呈现时间（`maxStTst`），默认为2秒。注意用户操作后刺激将消失。
 1. 空白屏幕。时间配置参数：试次间隔时间（`itiTst`），默认0.5秒。
 
-### 操作
+## 操作
 
 根据不同的设备状态，操作有所不同：
 
 * **键鼠操作**。学习阶段：要求用户必须用键盘上的左右键反应，而不能使用鼠标点击屏幕下方的按钮。键盘的左右键分别对应屏幕上的左右按钮。测试阶段：使用鼠标点击屏幕上的三个按钮进行操作。
 * **触控屏操作**。触碰屏幕下方对应的按钮即可。
 
-### 序列配置
+## 序列配置
 
 序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)。序列中各个元素的意义：
 
@@ -85,14 +85,14 @@ VER <- "V4"
 * `type`：测试阶段专有。该图片出现在测试阶段时的类型。`target`表示该图片在学习阶段出现过，`lure`表示该图片的另一个类似的版本在学习阶段出现过，`foil`表示该图片是全新的图片。
 * `cresp`：测试阶段专有。正确答案。`old`（和`target`对应）表示正确答案是`旧的`，`similar`（和`lure`对应）表示正确答案是`相似`，`new`（和`foil`对应）表示正确答案是`新的`。
 
-## 配置参数
+# 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE}
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
              caption = "配置参数总表")
 ```
 
-## 数据记录
+# 数据记录
 
 * 题目结果显示
     + 显示正确率和平均正确反应时间
@@ -104,7 +104,7 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
              caption = "原始数据变量列表")
 ```
 
-## 试题算分（待定）
+# 试题算分（待定）
 
 ```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 # knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")),
