--- a/content/post/05001_BART.Rmd
+++ b/content/post/05001_BART.Rmd
@@ -15,7 +15,7 @@ SDK <- 300
 VER <- "V4"
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
@@ -23,7 +23,7 @@ VER <- "V4"
 * **任务描述**：测查自控力，特别是控制冲动的能力。
 * **测查能力**：自控力-控制冲动
 
-## 交互界面
+# 交互界面
 
 如下图，屏幕中央展示一个气球；下方有左右两个按钮，分别采用一个**形状**表示**打气**（左侧）和**获取奖励**（右侧）；按钮下方有上下两个计分板，分别用**刻度**表示累计获得的奖励（上）和最近一个未爆炸气球成功兑换的奖励（下）。用户可以通过触碰按钮（“移动APP”）或使用鼠标点击（“电脑WEB”）或使用键盘的左右键（“电脑WEB”，需要在练习时候提示）而做出选择。
 
@@ -39,7 +39,7 @@ knitr::include_graphics("/images/BART/界面.png")
 * 选择“获取奖励”
 : 同时完成四个更新：气球消失；展示获得奖励分数：奖励分数 $=$ 打气次数 $\times$ 5；增加累计分数的**刻度**累加进新的分数；更新最近获得奖励分数。
 
-## 详细说明
+# 详细说明
 
 * 气球爆炸几率
     + 假设气球最大打气次数为 $N$ （参数配置），那么，用户第 $K$ 次打气时的气球爆炸的概率为 $\frac{1}{N - K + 1}$ 。例如：
@@ -48,7 +48,7 @@ knitr::include_graphics("/images/BART/界面.png")
         - 若用户执行第2次打气，则从[1, 2, 3, 4]的数组中随机取一个数字：若取到1，则打气后气球爆炸；若未取到1，则气球增大，同时奖金池增大5。
         - 依此类推。
 
-## 配置参数
+# 配置参数
 
 : 配置参数总表
 
@@ -61,7 +61,7 @@ knitr::include_graphics("/images/BART/界面.png")
 | 操作反馈 | `feedbackSound`        | `bool` | 1      | 控制正式测评时候是（1）否（0）给出声音反馈       |
 | 操作反馈 | `feedbackVisual`       | `bool` | 1      | 控制正式测评时候是（1）否（0）给出声音反馈       |
 
-## 数据记录
+# 数据记录
 
 * 题目结果显示
     + 显示获得的奖励分数和成功兑换奖励的气球个数
@@ -76,7 +76,7 @@ knitr::include_graphics("/images/BART/界面.png")
 | `CurUtility` | `int`  | 当前气球的奖励         |
 | `CumUtility` | `int`  | 累计奖励               |
 
-## 试题算分
+# 试题算分
 
 * 算分码：`r SDK`
 * 传入参数：
@@ -85,4 +85,4 @@ knitr::include_graphics("/images/BART/界面.png")
 |----------|-------------|--------------------------|
 | `hits`   | `int array` | 所有未爆炸气球的打气次数 |
 
-## 修订历史
+# 修订历史
