--- a/content/fix/00301_spatialSpan.Rmd
+++ b/content/fix/00301_spatialSpan.Rmd
@@ -18,7 +18,7 @@ CODE <- "00301"
 SDK <- 301
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
@@ -26,14 +26,14 @@ SDK <- 301
 * **任务描述**：测查记忆力，特别是个体的空间短时记忆力
 * **测查能力**：记忆力-短时记忆
 
-## 数据记录
+# 数据记录
 
-### 结果显示
+## 结果显示
 
 + 显示最多能正确回忆出来的方块位置数目
 + 展示标准分数和超越百分比
 
-### 数据提交
+## 数据提交
 
 表\@ref(tab:recording-variables)说明了对于每一个试次需要记录的数据（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）。
 
