--- a/content/fix/02101_itemTracking.Rmd
+++ b/content/fix/02101_itemTracking.Rmd
@@ -18,7 +18,7 @@ CODE <- "02101"
 SDK <- 301
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
@@ -26,14 +26,14 @@ SDK <- 301
 * **任务描述**：测查注意力，特别是个体在一定时间内，将注意稳定地保持在指定对象上的能力。
 * **测查能力**：注意力-选择注意
 
-## 数据记录
+# 数据记录
 
-### 结果显示
+## 结果显示
 
 + 显示最多能正确选择出来的追踪点数
 + 展示标准分数和超越百分比
 
-### 数据提交
+## 数据提交
 
 表\@ref(tab:recording-variables)说明了对于每一个试次需要记录的数据（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）。
 
