--- a/content/post/00102_Flanker2.Rmd
+++ b/content/post/00102_Flanker2.Rmd
@@ -15,7 +15,7 @@ SDK <- 201
 VER <- "V4"
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
@@ -25,7 +25,7 @@ VER <- "V4"
 * **相关任务**：[方向达人](`r blogdown::shortcode("relref", "00101_Flanker.html")`)。本题目与该题目属于同种题目，且本题目适用于10岁及10岁以下儿童。
 * **参考演示**：参考美国国立卫生院的[题目设计](http://player.youku.com/embed/XMzIzMTA1NTk4NA==)。
 
-## 交互界面
+# 交互界面
 
 首先，屏幕中央呈现一个加号（`+`，即注视点，用于提醒用户注意屏幕中央）。一定时间（由参数控制）后，加号消失，同时屏幕中央呈现一个刺激（由**5条小鱼**排成一排而组成的图片，具体参看详细说明），且屏幕下方左右分别需要*同时*呈现<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>按钮。用户需要在刺激消失（刺激呈现最长时间由参数控制）前根据**最中间小鱼鱼头的朝向**做出操作反应（见详细说明）。用户反应或达到刺激最大呈现时间后刺激消失，接着屏幕保持一定时间的空白（试次间隔时间）后进入下一个试次。
 
@@ -36,7 +36,7 @@ VER <- "V4"
 
 为了增加用户（儿童）的兴趣，引导时候告诉用户点击中间小鱼鱼头朝向的一侧（`Android/iOS`）或按与鱼头朝向相同的方向键（`PC/Web`）以喂养小鱼，并使用喂食成功小鱼很开心作为正确的反馈、喂食失败小鱼很伤心作为错误的反馈（*反馈在正式测试时候移除*）。
 
-## 详细说明
+# 详细说明
 
 * 刺激
     + **刺激配置**：由一排包含**5条鱼头朝左或朝右的卡通小鱼**的图片组成。其中：最中间的小鱼为**目标刺激**，即用户需要根据该刺激确定操作方式；两侧的四条小鱼为**干扰刺激**，即用户需要忽略这些刺激的干扰只对中间的小鱼进行操作。详细请看下方**刺激列表**。
@@ -66,14 +66,14 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv"
         - `cresp`：包含了由**正确答案**组成的多个序列，可能值为`Left`和`Right`
         - `type`：包含了由**刺激类型**（即“一致(`Congruent`)”或“不一致(`Incongruent`)”）组成的多个序列
 
-## 配置参数
+# 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
              caption = "配置参数总表")
 ```
 
-## 数据记录
+# 数据记录
 
 * 题目结果显示
     + 显示正确率和平均正确反应时间
@@ -85,7 +85,7 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
              caption = "原始数据变量列表")
 ```
 
-## 试题算分
+# 试题算分
 
 * 算分码：`r SDK`
 * 传入参数：
@@ -94,4 +94,4 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")))
 ```
 
-## 修订历史
+# 修订历史
