--- a/content/post/00903_CPT2.Rmd
+++ b/content/post/00903_CPT2.Rmd
@@ -15,7 +15,7 @@ SDK <- 101
 VER <- "V4"
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
@@ -24,13 +24,13 @@ VER <- "V4"
 * **任务描述**：测查注意力，特别是长时间注意目标的能力。
 * **测查能力**：注意力-持续注意
 
-## 交互界面
+# 交互界面
 
 屏幕中央以*一次一张*的方式**快速闪现**一系列由**四种动物**组成的卡片。每张卡片闪现后，用户必须在下一张卡片出现前对**目标卡片**进行**操作**，之后程序会对其操作给出相应的**反馈**。在反馈或**刺激间隔时间**后，立即呈现下一张卡片。
 
 **练习**。引导的第一屏不宜采用文字，最好制作一个短暂的示意动画来提示（特别是对于低年级儿童）。引导结束后的练习部分至少做20个刺激，保证正确率在80%以上。
 
-## 详细说明
+# 详细说明
 
 * 刺激：虚拟卡片
     + **刺激配置**：关键刺激`虫子(A)`、`小鸟(X)`。其他刺激：`兔子(B)`、`青蛙(C)`、`蜜蜂(D)`。
@@ -59,14 +59,14 @@ VER <- "V4"
         - `stim`：包含了由**刺激名称**组成的多个序列
         - `scat`：包含了由**刺激类别**组成的多个序列
 
-## 配置参数
+# 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
              caption = "配置参数总表")
 ```
 
-## 数据记录
+# 数据记录
 
 * 题目结果显示
     + 显示正确率和平均正确反应时间
@@ -78,7 +78,7 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
              caption = "原始数据变量列表")
 ```
 
-## 试题算分
+# 试题算分
 
 * 算分码：`r SDK`
 * 传入参数：
@@ -87,7 +87,7 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")))
 ```
 
-## 修订历史
+# 修订历史
 
 1. （2017/10/25，张亮，潘世豪）变更数据记录方式：
     + 修改前：统一使用`;`分割不同试次；使用`,`分割单个试次中记录的不同变量
