--- a/content/post/03202_Shifting2.Rmd
+++ b/content/post/03202_Shifting2.Rmd
@@ -15,7 +15,7 @@ SDK <- 201
 VER <- "V4"
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
@@ -24,7 +24,7 @@ VER <- "V4"
 * **测查能力**：思维力-思维灵活性
 * **相关任务**：[思维转换](`r blogdown::shortcode("relref", "03201_Shifting.html")`)。本题目适用于5年级（10岁）以上儿童，低年级请使用思维转换任务。
 
-## 交互界面
+# 交互界面
 
 ```{r task-flow, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 DiagrammeR::grViz(here::here("data", "config", NAME_EN, "taskflow.gv"),
@@ -39,7 +39,7 @@ DiagrammeR::grViz(here::here("data", "config", NAME_EN, "taskflow.gv"),
 1. 指引和练习第2个子任务，并保证用户理解第2个子任务。
 1. 指引和练习在两个子任务混合起来（实际测试时候的形式）的时候如何操作。
 
-## 详细说明
+# 详细说明
 
 * 刺激
     + **线索符号**两个：其意义在告知用户当前试次需要执行的子任务。
@@ -85,14 +85,14 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv"
         - `cond`：包含了由**任务条件**，即任务是否切换，组成的多个序列，且每个序列中，第一个注明为`Filler`，其余为`Repeat`和`Switch`中的一个
         - `cresp`：包含了由**正确答案**组成的多个序列，可能值为`Left`和`Right`
 
-## 配置参数
+# 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
              caption = "配置参数总表")
 ```
 
-## 数据记录
+# 数据记录
 
 * 题目结果显示
     + 显示正确率和平均正确反应时间
@@ -104,7 +104,7 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
              caption = "原始数据变量列表")
 ```
 
-## 试题算分
+# 试题算分
 
 * 算分码：201
 * 传入参数：
@@ -113,4 +113,4 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")))
 ```
 
-## 修订历史
+# 修订历史
