--- a/content/post/06901_Filtering.Rmd
+++ b/content/post/06901_Filtering.Rmd
@@ -21,7 +21,7 @@ SDK <- 104
 VER <- "V4"
 ```
 
-## 基本信息
+# 基本信息
 
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
@@ -30,7 +30,7 @@ VER <- "V4"
 * **测查能力**：注意力-选择注意
 * **相关任务**：[班务达人（Filtering2）](`r blogdown::shortcode("relref", "06902_Filtering2.html")`)。本题目版本推荐用于10岁以上人群。
 
-## 交互界面
+# 交互界面
 
 ```{r taskflow-image, fig.cap="基本流程[^1]", fig.align='center', echo=FALSE}
 knitr::include_graphics("/images/Filtering/taskflow.png")
@@ -53,9 +53,9 @@ knitr::include_graphics("/images/Filtering/taskflow.png")
 [^1]: 注意该图仅为样例，实际使用的[图形元素](#刺激)需要重新设计。
 [^2]: 刺激阵列消失后需注意给用户的反馈信息。
 
-## 详细说明
+# 详细说明
 
-### 刺激
+## 刺激
 
 本题目的刺激是刺激阵列，即由多个元素组成[@Ophir2009]。其中包含两类元素：
 
@@ -77,14 +77,14 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv"
 1. 刺激阵列2呈现。时间配置参数：最大呈现时间2（`maxSt2`），默认2000毫秒。注意在用户操作后刺激也会立即消失。
 1. 试次间空白屏。时间配置参数：试次间隔时间（`iti`），默认200毫秒。
 
-### 操作
+## 操作
 
 用户需要根据前后两次出现的刺激阵列是否有需要注意的元素发生改变（即朝向旋转45&deg;）进行操作。若刺激阵列中有元素没有改变，则按“没变”按钮；反之，则按“变了”按钮。根据不同的设备状态，操作有所不同：
 
 * **键鼠操作**。要求用户必须用键盘上的左右键反应，而不能使用鼠标点击屏幕下方的按钮。键盘的左右键分别对应屏幕下方的左右按钮。
 * **触控屏操作**。触碰屏幕下方对应的按钮即可。
 
-### 序列配置
+## 序列配置
 
 序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)。序列中各个元素的意义：
 
@@ -95,14 +95,14 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv"
 * `type`：刺激阵列第二次出现时的变化。`Stay`表示不旋转，`Clockwise`表示顺时针旋转45&deg;，`Counter`表示逆时针旋转45&deg;。
 * `cresp`：正确答案。`Left`表示左侧，`Right`表示右侧。
 
-## 配置参数
+# 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE}
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
              caption = "配置参数总表")
 ```
 
-## 数据记录
+# 数据记录
 
 * 题目结果显示
     + 显示正确率和平均正确反应时间
@@ -114,13 +114,13 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
              caption = "原始数据变量列表")
 ```
 
-## 试题算分
+# 试题算分
 
 ```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")),
              caption = paste0("传入参数（算分码：`", SDK, "`）"))
 ```
 
-## 修订历史
+# 修订历史
 
-## 参考文献
+# 参考文献
