Modify faceSnack to two rounds

--- a/content/fix/02201_faceSnack.Rmd
+++ b/content/fix/02201_faceSnack.Rmd
@@ -26,11 +26,18 @@ SDK <- 100
 * **任务描述**：测查记忆力，特别是个体记住事物之间的联系（如人脸和名字）的能力。
 * **测查能力**：记忆力-联系记忆
 
+# 详细说明
+
+正式测评需要修改为两轮，即把现在的学习和测试重复一次，要求：
+
+* 和现有的轮次学习相同的15个配对，但是出现顺序重新随机；
+* 测试时顺序也重新随机，并且修改选项。
+
 # 数据记录
 
 ## 结果显示
 
-+ 显示正确记忆出来的配对数目
++ 显示两轮测试总共正确记忆出来的配对数目
 + 展示标准分数和超越百分比
 
 ## 数据提交
