--- a/content/post/01201_PVTAdult.Rmd
+++ b/content/post/01201_PVTAdult.Rmd
@@ -5,6 +5,9 @@ date: '2018-04-12'
 slug: 01201-PVTAdult
 code: "01201"
 tasknames: "简单反应时"
+categories:
+- 文档
+- 修复
 output:
   blogdown::html_page:
     toc: true
