--- a/content/post/05201_RunningMemory.Rmd
+++ b/content/post/05201_RunningMemory.Rmd
@@ -5,6 +5,7 @@ date: 2018-03-03
 slug: 05201-runningmemory
 code: "05201"
 tasknames: "连续记忆广度"
+categories: "文档"
 ---
 
 ```{r basic-settings, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
