--- a/content/post/00202_digitalDesc.Rmd
+++ b/content/post/00202_digitalDesc.Rmd
@@ -1,10 +1,13 @@
 ---
-title: 位置记忆（spatialSpan）
+title: 倒背数（digital-desc）
 author: 张亮
 date: '2018-04-12'
-slug: 00301-spatialSpan
-code: "00301"
-tasknames: "短时记忆"
+slug: 00202-digital-desc
+code: "00202"
+tasknames: "数字记忆广度"
+categories:
+- 文档
+- 修复
 output:
   blogdown::html_page:
     toc: true
@@ -12,9 +15,9 @@ output:
 ---
 
 ```{r basic settings, include=FALSE}
-NAME_CN <- "位置记忆"
-NAME_EN <- "spatialSpan"
-CODE <- "00301"
+NAME_CN <- "倒背数"
+NAME_EN <- "digital-desc"
+CODE <- "00202"
 SDK <- 301
 ```
 
@@ -23,14 +26,14 @@ SDK <- 301
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
 * **题目编号**：`r CODE`
-* **任务描述**：测查记忆力，特别是个体的空间短时记忆力
-* **测查能力**：记忆力-短时记忆
+* **任务描述**：测查自控力，特别是根据需要操纵头脑中存储的信息的能力
+* **测查能力**：自控力-信息更新
 
 # 数据记录
 
 ## 结果显示
 
-+ 显示最多能正确回忆出来的方块位置数目
++ 显示最多能正确倒背出来的数字数目
 + 展示标准分数和超越百分比
 
 ## 数据提交
