--- a/content/post/02101_itemTracking.Rmd
+++ b/content/post/02101_itemTracking.Rmd
@@ -1,10 +1,13 @@
 ---
-title: 联系记忆（faceSnack）
+title: 雷达追踪（itemTracking）
 author: 张亮
 date: '2018-04-12'
-slug: 02201-faceSnack
-code: "02201"
-tasknames: "联系记忆"
+slug: 02101-itemTracking
+code: "02101"
+tasknames: "多目标追踪范式"
+categories:
+- 文档
+- 修复
 output:
   blogdown::html_page:
     toc: true
@@ -12,10 +15,10 @@ output:
 ---
 
 ```{r basic settings, include=FALSE}
-NAME_CN <- "联系记忆"
-NAME_EN <- "faceSnack"
-CODE <- "02201"
-SDK <- 100
+NAME_CN <- "雷达追踪"
+NAME_EN <- "itemTracking"
+CODE <- "02101"
+SDK <- 301
 ```
 
 # 基本信息
@@ -23,21 +26,14 @@ SDK <- 100
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
 * **题目编号**：`r CODE`
-* **任务描述**：测查记忆力，特别是个体记住事物之间的联系（如人脸和名字）的能力。
-* **测查能力**：记忆力-联系记忆
-
-# 详细说明
-
-正式测评需要修改为两轮，即把现在的学习和测试重复一次，要求：
-
-* 和现有的轮次学习相同的15个配对，但是出现顺序重新随机；
-* 测试时顺序也重新随机，并且修改选项。
+* **任务描述**：测查注意力，特别是个体在一定时间内，将注意稳定地保持在指定对象上的能力。
+* **测查能力**：注意力-选择注意
 
 # 数据记录
 
 ## 结果显示
 
-+ 显示两轮测试总共正确记忆出来的配对数目
++ 显示最多能正确选择出来的追踪点数
 + 展示标准分数和超越百分比
 
 ## 数据提交
