--- a/content/post/05803_butterfly.Rmd
+++ b/content/post/05803_butterfly.Rmd
@@ -68,7 +68,7 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
              caption = "原始数据变量列表")
 ```
 
-## 试题算分
+# 试题算分
 
 ```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")),
